@@ -1,3 +1,8 @@
+2012-09-14  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* printcmd.c (ui_printf): Eliminate single-use variable
+	PARAM_LEN.
+
 2012-09-14  Yao Qi  <yao@codesourcery.com>
 	    Pedro Alves  <palves@redhat.com>
 
